Added typing animation and improved meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI & DS Engineer Portfolio</title>
+    <meta name="description" content="Sahil Sawant - AI & DS Engineer Portfolio | Expert in Machine Learning and Data Science">
+    <title>Sahil Sawant - AI & DS Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -27,7 +28,7 @@
             <img src="id image.jpg" alt="Profile Picture" class="profile-img">
             <h1>Sahil Sawant</h1>
             <h2 class="role">AI & DS Engineer</h2>
-            <p class="tagline">Transforming Data into Intelligence | Building the Future with AI</p>
+            <p class="tagline typing-animation">Building the Future with AI & Data Science</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/sahil-sawant-234460197" target="_blank" class="social-btn">
                     <i class="fab fa-linkedin"></i>
