--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
     <nav>
         <div class="nav-content">
-            <div class="logo">
+            <div class="logo"> 
                 <a href="#">Portfolio</a>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#educations">Education</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -42,7 +43,8 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a dedicated AI & DS Engineer with expertise in machine learning, data analysis, and software development. I'm passionate about solving complex problems and creating innovative solutions using cutting-edge technologies.</p>
+        <p>I am AI & DS Engineer with expertise in machine learning, data analysis, and software development. I'm passionate about solving complex problems and creating innovative solutions using new technologies. </p>
+        
     </section>
 
     <section id="skills">
@@ -57,7 +59,7 @@
                     <li>Data Structures & Algorithms</li>
                 </ul>
             </div>
-            <div class="skill-card">
+            <div class="skill-card">  
                 <i class="fas fa-brain"></i>
                 <h3>AI & ML</h3>
                 <ul>
@@ -78,10 +80,45 @@
         </div>
     </section>
 
+    <section id="educations"></section>
+        <h2>My Education</h2>
+        <div class="education-container">
+                <div class="education-card">
+                    <i class="fas fa-school"></i>
+                    <h3>School</h3>
+                    <ul>
+                        <li>VPS Peth</li>
+                        <li>10th marks: 83%</li>
+                    </ul>
+                </div>
+                <div class="education-card">  
+                    <i class="fas fa-school"></i>
+                    <h3>High School</h3>
+                    <ul>
+                        <li>KBP College Islampur</li>
+                        <li>12th marks: 60%</li>
+                        <li>JEE persentile:74.32%</li>
+                    </ul>
+                </div>
+                <div class="education-card">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>BTech</h3>
+                    <ul>
+                        <li>ADCET Ashta </li>
+                        <li>Current CGPI: 8.32</li>
+                        <li></li>
+
+                    </ul>
+                </div>
+            </div>
+
+
+
+
     <section id="contact">
         <h2>Contact Me</h2>
         <div class="contact-container">
-            <a href="mailto:your.email@example.com" class="contact-btn">
+            <a href="mailto:sawantsahil183@gmail.com" class="contact-btn">
                 <i class="fas fa-envelope"></i> Email
             </a>
             <a href="https://www.linkedin.com/in/sahil-sawant-234460197" target="_blank" class="contact-btn">
@@ -94,9 +131,10 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 AI & DS Engineer Portfolio. All rights reserved.</p>
+        <p>&copy; 2025 Sahil Sawant Portfolio. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
