--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <nav>
         <div class="nav-content">
-            <div class="logo"> 
+            <div class="logo">
                 <a href="#">Portfolio</a>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#educations">Education</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -26,7 +26,7 @@
 
     <section id="home">
         <div class="profile-container">
-            <img src="id image.jpg.jpg" alt="Profile Picture" class="profile-img">
+            <img src="id image.jpg" alt="Profile Picture" class="profile-img">
             <h1>Sahil Sawant</h1>
             <h2 class="role">AI & DS Engineer</h2>
             <p class="tagline typing-animation">Building the Future with AI & Data Science</p>
@@ -75,45 +75,46 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
+                    <li>React</li>
                 </ul>
             </div>
         </div>
     </section>
-
-    <section id="educations"></section>
+    
+    <section id="education">
         <h2>My Education</h2>
         <div class="education-container">
-                <div class="education-card">
-                    <i class="fas fa-school"></i>
-                    <h3>School</h3>
-                    <ul>
-                        <li>VPS Peth</li>
-                        <li>10th marks: 83%</li>
-                    </ul>
-                </div>
-                <div class="education-card">  
-                    <i class="fas fa-school"></i>
-                    <h3>High School</h3>
-                    <ul>
-                        <li>KBP College Islampur</li>
-                        <li>12th marks: 60%</li>
-                        <li>JEE persentile:74.32%</li>
-                    </ul>
-                </div>
-                <div class="education-card">
-                    <i class="fas fa-laptop-code"></i>
-                    <h3>BTech</h3>
-                    <ul>
-                        <li>ADCET Ashta </li>
-                        <li>Current CGPI: 8.32</li>
-                        <li></li>
-
-                    </ul>
-                </div>
+            <div class="education-card">
+                <i class="fas fa-school"></i>
+                <h3>10th Standard</h3>
+                <ul>
+                    <li>VPS Peth</li>
+                    <li>Percentage: 83%</li>
+                    <li>Year: 2019</li>
+                </ul>
             </div>
-
-
-
+            <div class="education-card">  
+                <i class="fas fa-graduation-cap"></i>
+                <h3>12th Standard</h3>
+                <ul>
+                    <li>KBP College Islampur</li>
+                    <li>Percentage: 60%</li>
+                    <li>JEE Percentile: 74.32%</li>
+                    <li>Year: 2021</li>
+                </ul>
+            </div>
+            <div class="education-card">
+                <i class="fas fa-university"></i>
+                <h3>B.Tech</h3>
+                <ul>
+                    <li>ADCET Ashta</li>
+                    <li>Current CGPI: 8.32</li>
+                    <li>Computer Science & Engineering</li>
+                    <li>2021 - Present</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
     <section id="contact">
         <h2>Contact Me</h2>
@@ -137,3 +138,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
+       
