--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <ul>
                     <li>C/C++</li>
                     <li>Python</li>
+                    <li>MySQL</li>
                     <li>Data Structures & Algorithms</li>
                 </ul>
             </div>
@@ -72,10 +73,10 @@
                 <i class="fas fa-laptop-code"></i>
                 <h3>Web Development</h3>
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
+                    <li><b>Full Stack</b></li>
+                    <li>HTML/CSS</li>
                     <li>JavaScript</li>
-                    <li>React</li>
+                    <li>React/MongoDB/ReactJs/NextJS</li>
                 </ul>
             </div>
         </div>
