--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <ul>
                     <li>ADCET Ashta</li>
                     <li>Current CGPI: 8.32</li>
-                    <li>Computer Science & Engineering</li>
-                    <li>2021 - Present</li>
+                    <li>AI & Data Science</li>
+                    <li>2022-23 - 2025-26</li>
                 </ul>
             </div>
         </div>
