--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section id="home">
         <div class="profile-container">
-            <img src="id image.jpg" alt="Profile Picture of Sahil Sawant" class="profile-img">
+            <img src="id image.jpg.jpg" alt="Profile Picture of Sahil Sawant" class="profile-img">
             <h1>Sahil Sawant</h1>
             <h2 class="role">AI & DS Engineer</h2>
             <p class="tagline typing-animation">Building the Future with AI & Data Science</p>
